--- a/introduce/index.html
+++ b/introduce/index.html
@@ -3,53 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bootstrap Navbar Example</title>
     <link rel="stylesheet" href="main.css">
-    <title>Cooking Tutorial</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-    <div class="header">
-        <div class="wrap_header">
-            <div class="logo">
-                <img src="/assets/images/logo.png" alt="">
-            </div>
-            <div class="search_bar" >
-                <input type="text" placeholder="Search..."">
-            </div>
-            <div class="menu">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Menu</a></li>
-                    <li><a href="#">Giới thiệu</a></li>
-                    <div class="button">
-                        <a href="#">Đăng nhập</a>
-                    </div>
-                </ul>
-            </div>
-           
-            <div class="language">
-                <ul>
-                    <li>Tiếng việt</li>
-                    <div class="icon"><img src="./assets/icons/chonXuong.png" alt=""></div>
-                </ul>
-            </div>
-        </div>
-    </div>
 
-    <div class="banner">
-        <section class="parallax">
-            <h1>Hello, world!</h1>
-            <div class="front-layer">
-                <img src="../assets/images/image 10.png" alt="" class="cachuatren">
-                <img src="../assets/images/image 2.png" alt="" class="rauphai">
-                <img src="../assets/images/image 4.png" alt="" class="diarautraiduoi" >
-                <img src="../assets/images/image 5.png" alt="" class="phogiuaduoi" >
-             </div>
-            <div class="back-layer">
-                <img src="../assets/images/image 6.png" alt="" class="gatren">
-                <img src="../assets/images/image 8.png" alt="" class="rautrai">
-            </div>
-        </section>
+<nav class="navbar navbar-expand-lg navbar-light ">
+    <a class="navbar-brand" href="#">
+        <img src="/assets/images/logo.png" alt="">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <form class="form-inline my-2 my-lg-0 search-container">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Menu
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Bữa sáng</a>
+            <a class="dropdown-item" href="#">Bữa trưa</a>
+            <a class="dropdown-item" href="#">Ăn nhẹ</a>
+            <a class="dropdown-item" href="#">Món Rau</a>
+            <a class="dropdown-item" href="#">Món gà</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Giới thiệu</a>
+        </li>
+      </ul>
+      
+      <button type="button" class="btn btn-outline-success ml-2">Success</button>
     </div>
-    <script src="main.js"></script>
+  </nav>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
