--- a/detail_tutorial/DA/GCNM.html
+++ b/detail_tutorial/DA/GCNM.html
@@ -7,6 +7,8 @@
     <title>Gà chiên nước mắn</title>
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="GCNM.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
 </head>
 
 <body>
@@ -15,10 +17,10 @@
             <div class="logo">
                 <img src="/assets/images/logo.png" alt="">
             </div>
-            <div class="search_bar" >
+            <div class="search_bar">
                 <input type="text" placeholder="Search..."">
             </div>
-            <div class="menu">
+            <div class=" menu">
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Menu</a></li>
@@ -28,7 +30,7 @@
                     </div>
                 </ul>
             </div>
-           
+
             <div class="language">
                 <ul>
                     <li>Tiếng việt</li>
@@ -156,9 +158,120 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid footer">
-        <p>&copy; Cooking Tutorial 2024 Thiết Kế web</p>
+
+    <div class="contraine">
+
+        <footer class="text-center text-lg-start text-white" style="background-color: #45526e">
+
+            <div class="container p-4 pb-0">
+
+                <section class="">
+
+                    <div class="row">
+
+                        <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+                            <h6 class="text-uppercase mb-4 font-weight-bold">
+                                Cooking Tutoria
+                            </h6>
+                            <p>
+                                Cooking Tutoria giúp mọi người biết thêm những món ăn mới, trao dồi cách thức nấu ăn,
+                                trang trí.
+                            </p>
+                        </div>
+
+                        <hr class="w-100 clearfix d-md-none" />
+
+                        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3 ">
+                            <h6 class="text-uppercase mb-4 font-weight-bold">Home</h6>
+                            <div class="home">
+                                <div class="trai">
+                                    <p>
+                                        <a href="../../Home/home.html#Breakfast" class="text-white">Breakfast</a>
+                                    </p>
+                                    <p>
+                                        <a href="../../Home/home.html#Vegan" class="text-white">Vegan</a>
+                                    </p>
+                                    <p>
+                                        <a href="../../Home/home.html#Meat" class="text-white">Meat</a>
+                                    </p>
+                                </div>
+                                <div class="phai">
+                                    <p>
+                                        <a href="../../Home/home.html#Dessert" class="text-white">Dessert</a>
+                                    </p>
+                                    <p>
+                                        <a href="../../Home/home.html#Lunch" class="text-white">Lunch</a>
+                                    </p>
+                                    <p>
+                                        <a href="../../Home/home.html#Chocolate" class="text-white">Chocolate</a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <hr class="w-100 clearfix d-md-none" />
+
+
+                        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+                            <h6 class="text-uppercase mb-4 font-weight-bold">
+                                Contact gmail
+                            </h6>
+                            <p>
+                                <a href="mailto:duynm.23it@vku.udn.vn" class="text-white"><i
+                                        class="fas fa-envelope-open-text"></i> duynm.23it@vku.udn.vn</a>
+                            </p>
+                            <p>
+                                <a href="mailto:sanhnv.23it@vku.udn.vn" class="text-white"><i
+                                        class="fas fa-envelope-open-text"></i> sanhnv.23it@vku.udn.vn</a>
+                            </p>
+                            <p>
+                                <a href="mailto:taytv.23it@vku.udn.vn" class="text-white"><i
+                                        class="fas fa-envelope-open-text"></i> taytv.23it@vku.udn.vn</a>
+                            </p>
+                        </div>
+
+
+                        <hr class="w-100 clearfix d-md-none" />
+
+                        <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+                            <h6 class="text-uppercase mb-4 font-weight-bold">Contact Facebook</h6>
+                            <div class="con-f">
+                                <p>
+                                    <a href="https://www.facebook.com/duy.nguyenminh.56679" class="text-white"><i
+                                            class="fab fa-facebook"></i> Nguyễn Minh Duy</a>
+                                </p>
+                                <p>
+                                    <a href="https://www.facebook.com/tran.tay.1447342" class="text-white"><i
+                                            class="fab fa-facebook"></i> Trần Văn Tây</a>
+                                </p>
+                                <p>
+                                    <a href="https://www.facebook.com/profile.php?id=100036245914307"
+                                        class="text-white"><i class="fab fa-facebook"></i> Nguyễn Văn Sanh</a>
+                                </p>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </section>
+
+
+                <hr class="my-3">
+
+
+                <section class="p-3 pt-0">
+                    <div style="text-align: center;" class="p-3">
+                        <p>&copy; Cooking Tutorial 2024 Thiết Kế web</p>
+                    </div>
+                </section>
+
+            </div>
+
+        </footer>
+
     </div>
+
 </body>
 
 </html>
