update menu/route/intro page

--- a/detail_tutorial/DA/detail.html
+++ b/detail_tutorial/DA/detail.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="GCNM.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
 </head>
 
 <body>
-    <div class="header">
+    <!--
+        <div class="header">
         <div class="wrap_header">
             <div class="logo">
                 <img src="/assets/images/logo.png" alt="">
@@ -39,6 +41,43 @@
             </div>
         </div>
     </div>
+    -->
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="#">
+            <img src="/assets/images/logo.png" alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/home/home.html">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Menu
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Bữa sáng</a>
+                        <a class="dropdown-item" href="#">Bữa trưa</a>
+                        <a class="dropdown-item" href="#">Ăn nhẹ</a>
+                        <a class="dropdown-item" href="#">Món Rau</a>
+                        <a class="dropdown-item" href="#">Món gà</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/parallax_scroll/introduc.html">Giới thiệu</a>
+                </li>
+            </ul>
+            <form class="form-inline search-container mx-lg-auto ml-lg-n5 my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            </form>
+            <a href="/sign_in/sign.html" class="btn btn-primary" data-mdb-ripple-init>Đăng nhập</a>
+
+        </div>
+    </nav>
     <div class="container">
         <div class="row">
             <div class="col-sm-8">
@@ -272,6 +311,9 @@
 
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
