--- a/Home/home.html
+++ b/Home/home.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="home.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <title>Cooking Tutorial</title>
   </head>
   <body>
+    <!--
     <header>
       <div class="container">
         <h1 class="logo">Cooking Tutorial</h1>
@@ -21,7 +23,43 @@
         </nav>
       </div>
     </header>
+-->
+<nav class="navbar navbar-expand-lg navbar-light">
+  <a class="navbar-brand" href="#">
+      <img src="/assets/images/logo.png" alt="">
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+  </button>
 
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+              <a class="nav-link" href="/home/home.html">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Menu
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="#">Bữa sáng</a>
+                  <a class="dropdown-item" href="#">Bữa trưa</a>
+                  <a class="dropdown-item" href="#">Ăn nhẹ</a>
+                  <a class="dropdown-item" href="#">Món Rau</a>
+                  <a class="dropdown-item" href="#">Món gà</a>
+              </div>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="/parallax_scroll/introduc.html">Giới thiệu</a>
+          </li>
+      </ul>
+      <form class="form-inline search-container mx-lg-auto ml-lg-n5 my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      </form>
+      <a href="/sign_in/sign.html" class="btn btn-primary" data-mdb-ripple-init>Đăng nhập</a>
+
+  </div>
+</nav>
     <section class="hero">
       <div class="hero-section">
         <h2>Welcome to our Recipe Collection</h2>
@@ -78,7 +116,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
             aut
           </p>
-          <a href="#">View Recipe</a>
+          <a href="/detail_tutorial/DA/detail.html">View Recipe</a>
         </div>
         <div class="recipe-card">
           <img src="/assets/images/dish-2.jpg" alt="" />
@@ -315,5 +353,9 @@
         <p>&copy; Cooking Tutorial 2024 Thiết Kế web</p>
       </div>
     </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </body>
 </html>
