Add new project food

--- a/public/home/home.html
+++ b/public/home/home.html
@@ -54,7 +54,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="/home/home.html"
+              <a class="nav-link" href="/public/home/home.html"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
@@ -71,15 +71,15 @@
                 Menu
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Bữa sáng</a>
-                <a class="dropdown-item" href="#">Bữa trưa</a>
-                <a class="dropdown-item" href="#">Ăn nhẹ</a>
-                <a class="dropdown-item" href="#">Món Rau</a>
-                <a class="dropdown-item" href="#">Món gà</a>
+                <a class="dropdown-item" href="#Breakfast">Bữa sáng</a>
+                <a class="dropdown-item" href="#Lunch">Bữa trưa</a>
+                <a class="dropdown-item" href="#Dessert">Ăn nhẹ</a>
+                <a class="dropdown-item" href="#Vegan">Món Rau</a>
+                <a class="dropdown-item" href="#Meat">Món gà</a>
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/parallax_scroll/introduc.html"
+              <a class="nav-link" href="/public/parallax_scroll/introduc.html"
                 >Giới thiệu</a
               >
             </li>
