--- a/public/detail_tutorial/DA/CCC.html
+++ b/public/detail_tutorial/DA/CCC.html
@@ -27,102 +27,45 @@
   </head>
 
   <body>
-    <!--
-        <div class="header">
-        <div class="wrap_header">
-            <div class="logo">
-                <img src="/assets/images/logo.png" alt="">
-            </div>
-            <div class="search_bar">
-                <input type="text" placeholder="Search..."">
-            </div>
-            <div class=" menu">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Menu</a></li>
-                    <li><a href="#">Giới thiệu</a></li>
-                    <div class="button">
-                        <a href="#">Đăng nhập</a>
-                    </div>
-                </ul>
-            </div>
-
-            <div class="language">
-                <ul>
-                    <li>Tiếng việt</li>
-                    <div class="icon"><img src="./assets/icons/chonXuong.png" alt=""></div>
-                </ul>
-            </div>
-        </div>
-    </div>
-    -->
+    <div id="fixed-menu">
     <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" href="#">
-        <img src="/assets/images/logo.png" alt="" />
+        <img src="/public/assets/images/logo.png" alt="" />
       </a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="/home/home.html"
-              >Home <span class="sr-only">(current)</span></a
-            >
+            <a class="nav-link" href="/public/home/home.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              id="navbarDropdown"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
               Menu
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Bữa sáng</a>
-              <a class="dropdown-item" href="#">Bữa trưa</a>
-              <a class="dropdown-item" href="#">Ăn nhẹ</a>
-              <a class="dropdown-item" href="#">Món Rau</a>
-              <a class="dropdown-item" href="#">Món gà</a>
+              <a class="dropdown-item" href="../../home/home.html#Breakfast">Bữa sáng</a>
+              <a class="dropdown-item" href="../../home/home.html#Lunch">Bữa trưa</a>
+              <a class="dropdown-item" href="../../home/home.html#Dessert">Ăn nhẹ</a>
+              <a class="dropdown-item" href="../../home/home.html#Vegan">Món Rau</a>
+              <a class="dropdown-item" href="../../home/home.html#Meat">Món gà</a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/parallax_scroll/introduc.html"
-              >Giới thiệu</a
-            >
+            <a class="nav-link" href="/public/parallax_scroll/introduc.html">Giới thiệu</a>
           </li>
         </ul>
-        <form
-          class="form-inline search-container mx-lg-auto ml-lg-n5 my-2 my-lg-0"
-        >
-          <input
-            class="form-control mr-sm-2"
-            type="search"
-            placeholder="Search"
-            aria-label="Search"
-          />
+        <form class="form-inline search-container mx-lg-auto ml-lg-n5 my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" />
         </form>
-        <a
-          href="/sign_in/sign.html"
-          class="btn btn-primary"
-          data-mdb-ripple-init
-          >Đăng nhập</a
-        >
+        <a href="../../sign_in/sign.html" class="btn btn-primary" data-mdb-ripple-init>Đăng nhập</a>
       </div>
     </nav>
+  </div>
     <div class="container">
       <div class="row">
         <div class="col-sm-8">
@@ -369,4 +312,7 @@
       </div>
     </footer>
   </body>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </html>
