--- a/public/detail_tutorial/DA/GCC.html
+++ b/public/detail_tutorial/DA/GCC.html
@@ -190,129 +190,95 @@
     </div>
 
     <footer class="footer_area section_padding_130_0">
-      <div class="container">
-        <div class="row">
-          <!-- Single Widget-->
-          <div class="col-12 col-sm-6 col-lg-6">
-            <div class="single-footer-widget section_padding_0_130">
-              <!-- Footer Logo-->
+    <div class="container">
+      <div class="row">
+        <!-- Single Widget-->
+        <div class="col-12 col-sm-6 col-lg-6">
+          <div class="single-footer-widget section_padding_0_130">
+            <!-- Footer Logo-->
 
-              <h5 class="widget-title">Cooking Tutoria</h5>
-              <!-- Copywrite Text-->
-              <div class="copywrite-text mb-5">
-                <p>
-                  Cooking Tutoria được tạo nên với mong muốn có thể giúp cho
-                  người nội trợ sẽ dễ dàng hơn trong việc nấu ăn hàng ngày của
-                  mình. Từ công việc chuẩn bị các nguyên liệu, phải chọn món ăn
-                  hàng ngày hoặc lựa chọn những thiết bị dùng bếp sẽ trở nên dễ
-                  dàng hơn.
-                </p>
-              </div>
-              <!-- Footer Social Area-->
-              <div class="footer_social_area">
-                <a
-                  href="#"
-                  data-toggle="tooltip"
-                  data-placement="top"
-                  title=""
-                  data-original-title="Facebook"
-                  ><i class="fa fa-facebook"></i></a
-                ><a
-                  href="#"
-                  data-toggle="tooltip"
-                  data-placement="top"
-                  title=""
-                  data-original-title="Pinterest"
-                  ><i class="fa fa-pinterest"></i></a
-                ><a
-                  href="#"
-                  data-toggle="tooltip"
-                  data-placement="top"
-                  title=""
-                  data-original-title="Skype"
-                  ><i class="fa fa-skype"></i></a
-                ><a
-                  href="#"
-                  data-toggle="tooltip"
-                  data-placement="top"
-                  title=""
-                  data-original-title="Twitter"
-                  ><i class="fa fa-twitter"></i
-                ></a>
+            <h5 class="widget-title">Cooking Tutoria</h5>
+            <!-- Copywrite Text-->
+            <div class="copywrite-text mb-5">
+              <p style="margin-left: 10px;">
+                Cooking Tutoria được tạo nên với mong muốn có thể giúp cho
+                người nội trợ sẽ dễ dàng hơn trong việc nấu ăn hàng ngày của
+                mình. Từ công việc chuẩn bị các nguyên liệu, phải chọn món ăn
+                hàng ngày hoặc lựa chọn những thiết bị dùng bếp sẽ trở nên dễ
+                dàng hơn.
+              </p>
+            </div>
+            <!-- Footer Social Area-->
+            <div class="footer_social_area">
+              <div class="p-3">
+                <p>&copy; Cooking Tutorial 2024 Thiết Kế web</p>
               </div>
             </div>
-          </div>
-          <div class="col-12 col-sm-6 col-lg">
-            <div class="single-footer-widget section_padding_0_130">
-              <!-- Widget Title-->
-              <h5 class="widget-title">Tổng quan</h5>
-              <!-- Footer Menu-->
-              <div class="footer_menu">
-                <ul>
-                  <li><a href="../../Home/home.html">Trang chủ</a></li>
-                  <li>
-                    <a href="../../Home/home.html#category-title">Danh mục</a>
-                  </li>
-                  <li><a href="../../sign_in/sign.html">Đăng nhập</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <!-- Single Widget-->
-          <div class="col-12 col-sm-6 col-lg">
-            <div class="single-footer-widget section_padding_0_130">
-              <!-- Widget Title-->
-              <h5 class="widget-title">Danh mục</h5>
-              <!-- Footer Menu-->
-              <div class="footer_menu">
-                <ul>
-                  <li>
-                    <a href="../../Home/home.html#Breakfast">Breakfast</a>
-                  </li>
-                  <li><a href="../../Home/home.html#Vegan">Vegan</a></li>
-                  <li><a href="../../Home/home.html#Meat">Meat</a></li>
-                  <li><a href="../../Home/home.html#Dessert">Dessert</a></li>
-                  <li><a href="../../Home/home.html#Lunch">Lunch</a></li>
-                  <li>
-                    <a href="../../Home/home.html#Chocolate">Chocolate</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-6 col-lg">
-            <div class="single-footer-widget section_padding_0_130">
-              <!-- Widget Title-->
-              <h5 class="widget-title">Liên hệ</h5>
-              <!-- Footer Menu-->
-              <div class="footer_menu">
-                <ul>
-                  <li>
-                    <a
-                      href="mailto:duynm.23it@vku.udn.vn"
-                      class="fas fa-envelope-open-text"
-                      >&#160;duynm.23it@vku.udn.vn</a
-                    >
-                  </li>
-                  <li>
-                    <a
-                      href="https://www.facebook.com/duy.nguyenminh.56679"
-                      class="fab fa-facebook"
-                      >&#160;Nguyễn Minh Duy</a
-                    >
-                  </li>
-                  <li><a href="#" class="fas fa-phone">&#160;0123456789</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-
-          <div style="text-align: center" class="p-3">
-            <p>&copy; Cooking Tutorial 2024 Thiết Kế web</p>
           </div>
         </div>
+        <div class="col-12 col-sm-6 col-lg">
+          <div class="single-footer-widget section_padding_0_130">
+            <!-- Widget Title-->
+            <h5 class="widget-title">Tổng quan</h5>
+            <!-- Footer Menu-->
+            <div class="footer_menu">
+              <ul>
+                <li><a href="../../Home/home.html">Trang chủ</a></li>
+                <li>
+                  <a href="../../Home/home.html#category-title">Danh mục</a>
+                </li>
+                <li><a href="../../sign_in/sign.html">Đăng nhập</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <!-- Single Widget-->
+        <div class="col-12 col-sm-6 col-lg">
+          <div class="single-footer-widget section_padding_0_130">
+            <!-- Widget Title-->
+            <h5 class="widget-title">Danh mục</h5>
+            <!-- Footer Menu-->
+            <div class="footer_menu">
+              <ul>
+                <li>
+                  <a href="../../Home/home.html#Breakfast">Breakfast</a>
+                </li>
+                <li><a href="../../Home/home.html#Vegan">Vegan</a></li>
+                <li><a href="../../Home/home.html#Meat">Meat</a></li>
+                <li><a href="../../Home/home.html#Dessert">Dessert</a></li>
+                <li><a href="../../Home/home.html#Lunch">Lunch</a></li>
+                <li>
+                  <a href="../../Home/home.html#Chocolate">Chocolate</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-lg">
+          <div class="single-footer-widget section_padding_0_130">
+            <!-- Widget Title-->
+            <h5 class="widget-title">Liên hệ</h5>
+            <!-- Footer Menu-->
+            <div class="footer_menu">
+              <ul>
+                <li>
+                  <a href="mailto:duynm.23it@vku.udn.vn"
+                    class="fas fa-envelope-open-text">&#160;duynm.23it@vku.udn.vn</a>
+                </li>
+                <li>
+                  <a href="https://www.facebook.com/duy.nguyenminh.56679" class="fab fa-facebook">&#160;Nguyễn Minh
+                    Duy</a>
+                </li>
+                <li><a href="#" class="fas fa-phone">&#160;0123456789</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        
       </div>
-    </footer>
+    </div>
+  </footer>
   </body>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
