--- a/public/detail_tutorial/DA/BBH.html
+++ b/public/detail_tutorial/DA/BBH.html
@@ -224,7 +224,7 @@
             <h5 class="widget-title">Cooking Tutoria</h5>
             <!-- Copywrite Text-->
             <div class="copywrite-text mb-5">
-              <p>
+              <p style="margin-left: 10px;">
                 Cooking Tutoria được tạo nên với mong muốn có thể giúp cho
                 người nội trợ sẽ dễ dàng hơn trong việc nấu ăn hàng ngày của
                 mình. Từ công việc chuẩn bị các nguyên liệu, phải chọn món ăn
@@ -234,12 +234,9 @@
             </div>
             <!-- Footer Social Area-->
             <div class="footer_social_area">
-              <a href="#" data-toggle="tooltip" data-placement="top" title="" data-original-title="Facebook"><i
-                  class="fa fa-facebook"></i></a><a href="#" data-toggle="tooltip" data-placement="top" title=""
-                data-original-title="Pinterest"><i class="fa fa-pinterest"></i></a><a href="#" data-toggle="tooltip"
-                data-placement="top" title="" data-original-title="Skype"><i class="fa fa-skype"></i></a><a href="#"
-                data-toggle="tooltip" data-placement="top" title="" data-original-title="Twitter"><i
-                  class="fa fa-twitter"></i></a>
+              <div class="p-3">
+                <p>&copy; Cooking Tutorial 2024 Thiết Kế web</p>
+              </div>
             </div>
           </div>
         </div>
@@ -302,9 +299,7 @@
           </div>
         </div>
 
-        <div style="text-align: center" class="p-3">
-          <p>&copy; Cooking Tutorial 2024 Thiết Kế web</p>
-        </div>
+        
       </div>
     </div>
   </footer>
