--- a/public/home/home.html
+++ b/public/home/home.html
@@ -95,7 +95,7 @@
             />
           </form>
           <a
-            href="/sign_in/sign.html"
+            href="/public/sign_in/sign.html"
             class="btn btn-primary"
             data-mdb-ripple-init
             >Đăng nhập</a
