--- a/public/home/home.html
+++ b/public/home/home.html
@@ -447,7 +447,7 @@
             Kem socola: mát lạnh, hương vị cacao nguyên chất, ngọt ngào, hấp dẫn
             mọi lứa tuổi.
           </p>
-          <a href="#">View Recipe</a>
+          <a href="/public/detail_tutorial/DA/KSCL.html">View Recipe</a>
         </div>
       </div>
     </section>
