--- a/public/sign_in/sign.html
+++ b/public/sign_in/sign.html
@@ -1,148 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign In / Sign up</title>
-    <link rel="stylesheet" href="style.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="main.css">
-    
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="main.css" />
+
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+    <link
+      rel="shortcut icon"
+      href="/public/assets/images/logo.png"
+      type="image/x-icon"
+      sizes="48x48"
+    />
     <style>
-        .full-width-container {
-            width: 100%;
-            max-width: 100%;
-            padding-left: 0;
-            padding-right: 0;
-        }
+      .full-width-container {
+        width: 100%;
+        max-width: 100%;
+        padding-left: 0;
+        padding-right: 0;
+      }
 
-        .navbar-brand img {
-            width: 50px; /* Đặt kích thước chiều rộng mong muốn */
-            height: auto; /* Đảm bảo tỷ lệ khung hình không bị thay đổi */
-        }
+      .navbar-brand img {
+        width: 50px; /* Đặt kích thước chiều rộng mong muốn */
+        height: auto; /* Đảm bảo tỷ lệ khung hình không bị thay đổi */
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#">
-            <img src="/assets/images/logo.png" alt="">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/home/home.html">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Menu
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Bữa sáng</a>
-                        <a class="dropdown-item" href="#">Bữa trưa</a>
-                        <a class="dropdown-item" href="#">Ăn nhẹ</a>
-                        <a class="dropdown-item" href="#">Món Rau</a>
-                        <a class="dropdown-item" href="#">Món gà</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/parallax_scroll/introduc.html">Giới thiệu</a>
-                </li>
-            </ul>
-            <form class="form-inline search-container mx-lg-auto ml-lg-n5 my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            </form>
-            <a href="/sign_in/sign.html" class="btn btn-primary" data-mdb-ripple-init>Đăng nhập</a>
+      <a class="navbar-brand" href="#">
+        <img src="/assets/images/logo.png" alt="" />
+      </a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        </div>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="/home/home.html"
+              >Home <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdown"
+              role="button"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              Menu
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Bữa sáng</a>
+              <a class="dropdown-item" href="#">Bữa trưa</a>
+              <a class="dropdown-item" href="#">Ăn nhẹ</a>
+              <a class="dropdown-item" href="#">Món Rau</a>
+              <a class="dropdown-item" href="#">Món gà</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/parallax_scroll/introduc.html"
+              >Giới thiệu</a
+            >
+          </li>
+        </ul>
+        <form
+          class="form-inline search-container mx-lg-auto ml-lg-n5 my-2 my-lg-0"
+        >
+          <input
+            class="form-control mr-sm-2"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+          />
+        </form>
+        <a
+          href="/sign_in/sign.html"
+          class="btn btn-primary"
+          data-mdb-ripple-init
+          >Đăng nhập</a
+        >
+      </div>
     </nav>
     <div class="container full-width-container">
-        <div class="forms-container">
-            <div class="signIn-signUp">
-                <form action="" class="sign-in-form">
-                    <h2 class="title">Sign In</h2>
-                    <div class="input-field">
-                        <i class='bx bx-user'></i>
-                        <input type="text" placeholder="User Name">
-                    </div>
-                    <div class="input-field">
-                        <i class='bx bx-lock-alt'></i>
-                        <input type="password" placeholder="Password">
-                    </div>
-                    <input type="submit" value="Log In" class="btn solid">
-                    <p class="social-text">Or Sign in with social platforms</p>
-                    <div class="social-media">
-                        <a href="#" class="social-icon">
-                            <i class="bx bxl-facebook"></i>
-                        </a>
-                        <a href="#" class="social-icon">
-                            <i class="bx bxl-twitter"></i>
-                        </a>
-                        <a href="#" class="social-icon">
-                            <i class="bx bxl-google"></i>
-                        </a>
-                        <a href="#" class="social-icon">
-                            <i class="bx bxl-linkedin"></i>
-                        </a>
-                    </div>
-                </form>
-                <form action="" class="sign-up-form">
-                    <h2 class="title">Sign Up</h2>
-                    <div class="input-field">
-                        <i class='bx bx-user'></i>
-                        <input type="text" placeholder="User Name">
-                    </div>
-                    <div class="input-field">
-                        <i class='bx bx-envelope'></i>
-                        <input type="email" placeholder="Email">
-                    </div>
-                    <div class="input-field">
-                        <i class='bx bx-lock-alt'></i>
-                        <input type="password" placeholder="Password">
-                    </div>
-                    <input type="submit" value="Sign Up" class="btn solid">
-                    <p class="social-text">Or Sign up with social platforms</p>
-                    <div class="social-media">
-                        <a href="#" class="social-icon">
-                            <i class="bx bxl-facebook"></i>
-                        </a>
-                        <a href="#" class="social-icon">
-                            <i class="bx bxl-twitter"></i>
-                        </a>
-                        <a href="#" class="social-icon">
-                            <i class="bx bxl-google"></i>
-                        </a>
-                        <a href="#" class="social-icon">
-                            <i class="bx bxl-linkedin"></i>
-                        </a>
-                    </div>
-                </form>
+      <div class="forms-container">
+        <div class="signIn-signUp">
+          <form action="" class="sign-in-form">
+            <h2 class="title">Sign In</h2>
+            <div class="input-field">
+              <i class="bx bx-user"></i>
+              <input type="text" placeholder="User Name" />
             </div>
+            <div class="input-field">
+              <i class="bx bx-lock-alt"></i>
+              <input type="password" placeholder="Password" />
+            </div>
+            <input type="submit" value="Log In" class="btn solid" />
+            <p class="social-text">Or Sign in with social platforms</p>
+            <div class="social-media">
+              <a href="#" class="social-icon">
+                <i class="bx bxl-facebook"></i>
+              </a>
+              <a href="#" class="social-icon">
+                <i class="bx bxl-twitter"></i>
+              </a>
+              <a href="#" class="social-icon">
+                <i class="bx bxl-google"></i>
+              </a>
+              <a href="#" class="social-icon">
+                <i class="bx bxl-linkedin"></i>
+              </a>
+            </div>
+          </form>
+          <form action="" class="sign-up-form">
+            <h2 class="title">Sign Up</h2>
+            <div class="input-field">
+              <i class="bx bx-user"></i>
+              <input type="text" placeholder="User Name" />
+            </div>
+            <div class="input-field">
+              <i class="bx bx-envelope"></i>
+              <input type="email" placeholder="Email" />
+            </div>
+            <div class="input-field">
+              <i class="bx bx-lock-alt"></i>
+              <input type="password" placeholder="Password" />
+            </div>
+            <input type="submit" value="Sign Up" class="btn solid" />
+            <p class="social-text">Or Sign up with social platforms</p>
+            <div class="social-media">
+              <a href="#" class="social-icon">
+                <i class="bx bxl-facebook"></i>
+              </a>
+              <a href="#" class="social-icon">
+                <i class="bx bxl-twitter"></i>
+              </a>
+              <a href="#" class="social-icon">
+                <i class="bx bxl-google"></i>
+              </a>
+              <a href="#" class="social-icon">
+                <i class="bx bxl-linkedin"></i>
+              </a>
+            </div>
+          </form>
         </div>
-        <div class="panels-container">
-            <div class="panel left-panel">
-                <div class="content">
-                    <h3>New Here ?</h3>
-                    <p>Welcome to our platform! Please enter your username and password to access your account. If you don't have an account yet, you can sign up for free.</p>
-                    <button class="btn transparent" id="sign-up-btn">Sign up</button>
-                </div>
-                <img src="img/1.png" alt="" class="img">
-            </div>
-            <div class="panel right-panel">
-                <div class="content">
-                    <h3>One of Us?</h3>
-                    <p>Welcome to our platform! Please enter your username and password to access your account. If you don't have an account yet, you can sign up for free.</p>
-                    <button class="btn transparent" id="sign-in-btn">Sign in</button>
-                </div>
-                <img src="img/2.png" alt="" class="img">
-            </div>
+      </div>
+      <div class="panels-container">
+        <div class="panel left-panel">
+          <div class="content">
+            <h3>New Here ?</h3>
+            <p>
+              Welcome to our platform! Please enter your username and password
+              to access your account. If you don't have an account yet, you can
+              sign up for free.
+            </p>
+            <button class="btn transparent" id="sign-up-btn">Sign up</button>
+          </div>
+          <img src="img/1.png" alt="" class="img" />
         </div>
+        <div class="panel right-panel">
+          <div class="content">
+            <h3>One of Us?</h3>
+            <p>
+              Welcome to our platform! Please enter your username and password
+              to access your account. If you don't have an account yet, you can
+              sign up for free.
+            </p>
+            <button class="btn transparent" id="sign-in-btn">Sign in</button>
+          </div>
+          <img src="img/2.png" alt="" class="img" />
+        </div>
+      </div>
     </div>
     <script src="script.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -151,6 +201,5 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-
+  </body>
 </html>
