--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,7 @@
             />
           </form>
           <a
-            href="/public/sign_in/sign.html"
+            href="/sign_in/sign.html"
             class="btn btn-primary"
             data-mdb-ripple-init
             >Đăng nhập</a
@@ -127,7 +127,7 @@
         </div>
         <div class="carousel-item">
           <img
-            src="/public/assets/images/dish-2.jpg"z
+            src="/public/assets/images/dish-2.jpg"
             class="d-block w-100"
             alt="..."
           />
@@ -159,8 +159,7 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
-    <!-- ..........Rectpe Section............  -->
-
+    <!-- ..........Rectpe Section............ -->
     <section class="recipes">
       <section>
         <div class="category-title row align-items-center">
@@ -213,7 +212,7 @@
           <p>
             Bánh canh giò heo là món ăn Việt Nam với sợi bánh canh dày, dai,
             nước dùng ngọt thanh từ xương, giò heo mềm, thơm, rau sống phong
-            phú, hành lá, tiêu xay tạo hương vị đậm đà, ấm áp và nóng hổi.
+            phú, hành lá, tiêu xay tạo hương vị đậm đà, ấm áp.
           </p>
           <a href="/public/detail_tutorial/DA/BC.html">View Recipe</a>
         </div>
@@ -265,9 +264,9 @@
           <img src="/public/assets/images/CRC/6.3.jpg" alt="" />
           <h2><b>Cà ri chay</b></h2>
           <p>
-            Cà ri chay đậm đà, nước sốt thơm lừng, nhân rau củ phong phú. Món ăn
-            phù hợp cho người ăn chay, dùng kèm cơm trắng hoặc bánh mì, mang đến
-            bữa ăn ấm áp, hạnh phúc.
+            Cà ri chay, món ăn đậm đà, nước sốt cà ri thơm lừng, nhân rau củ quả
+            đa dạng. Phù hợp cho người ăn chay, ăn kèm cơm trắng hoặc bánh mì,
+            bữa ăn ấm áp.
           </p>
           <a href="/public/detail_tutorial/DA/CRC.html">View Recipe</a>
         </div>
@@ -329,9 +328,8 @@
           <img src="/public/assets/images/BPL/6.4.jpg" alt="" />
           <h2><b>Bánh Flan</b></h2>
           <p>
-            Bánh flan mềm mịn, tan chảy trong miệng, thơm ngậy mùi caramel, vị
-            ngọt dịu, được ướp lạnh, làm từ trứng, sữa, đường, là món tráng
-            miệng hấp dẫn.
+            Bánh flan: mềm mịn, ngọt ngào, hương vị vani đặc trưng, phủ caramel
+            tan chảy, hấp dẫn, thích hợp làm món tráng miệng sau bữa ăn.
           </p>
           <a href="/public/detail_tutorial/DA/BFL.html">View Recipe</a>
         </div>
@@ -394,14 +392,14 @@
           <h2><b>Phở</b></h2>
           <p>
             Phở: sợi bánh phở mềm, thịt bò hoặc gà, nước dùng ngọt thanh từ
-            xương, hành, ngò, chanh và ớt đi kèm, món ăn trưa hoặc sáng yêu
-            thích tại Việt Nam.
+            xương, hành, ngò, chanh và ớt đi kèm, món ăn sáng yêu thích tại Việt
+            Nam.
           </p>
           <a href="/public/detail_tutorial/DA/PHO.html">View Recipe</a>
         </div>
         <div class="recipe-card">
           <img src="/public/assets/images/NN/6.3.jpg" alt="" />
-          <h2><b>Nem Nướng</b></h2>
+          <h2><b>Nem Nướng Nha Trang</b></h2>
           <p>
             Nem nướng Nha Trang: thịt heo nướng thơm lừng, vị ngọt tự nhiên, ăn
             kèm bánh tráng, rau sống, đặc sản Nha Trang, thích hợp làm món nhậu
@@ -424,7 +422,7 @@
         </div>
         <div class="recipe-card">
           <img src="/public/assets/images/SCLN/6.2.jpg" alt="" />
-          <h2><b>Socola Cacao Nóng</b></h2>
+          <h2>Socola Cacao Nóng</h2>
           <p>
             Socola cacao nóng, thức uống hương cacao đậm, ngọt ngào, ấm áp,
             tuyệt vời cho ngày lạnh.
@@ -436,7 +434,7 @@
           <h2><b>Pudding Socola</b></h2>
           <p>
             Pudding Socola: mềm mịn, hương cacao đậm, ngọt ngào, thích hợp mọi
-            người lớn nhỏ.
+            người.
           </p>
           <a href="/public/detail_tutorial/DA/PS.html">View Recipe</a>
         </div>
